--- a/Product.css
+++ b/Product.css
@@ -14,6 +14,7 @@ align-items: center;
 position: sticky;
 backdrop-filter: blur(45px);
 top: 0;
+flex-grow: 1;
 }
 
 .navbar ul{
@@ -21,7 +22,7 @@ top: 0;
   gap: 25px;
   display: flex;
   position: sticky;
-
+  margin: 0;
 }
 
 .navbar ul li{
@@ -60,6 +61,7 @@ top: 0;
   display: flex;
   align-items: center;
   transition: 0.3s ease;
+  gap: 10px;
 }
 
 .navbar-search input{
@@ -82,4 +84,19 @@ top: 0;
   outline: none;
   margin-right: 10px;
   background-color: #e1dfdf;
+}
+
+.header h1{
+  margin-bottom: 15px;
+}
+
+.navbar-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 85px;
+}
+
+.promo{
+  align-items: center;
 }
