--- a/Product.css
+++ b/Product.css
@@ -1,23 +1,22 @@
-*{
+* {
   margin: 0px;
   padding: 0px;
- font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-
-.navbar{
-  background-color:transparent;
-padding: 35px 85px;
-display: flex;
-justify-content: space-between;
-align-items: center;
-position: sticky;
-backdrop-filter: blur(45px);
-top: 0;
-flex-grow: 1;
+.navbar {
+  background-color: transparent;
+  padding: 35px 85px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  backdrop-filter: blur(45px);
+  top: 0;
+  flex-grow: 1;
 }
 
-.navbar ul{
+.navbar ul {
   list-style: none;
   gap: 25px;
   display: flex;
@@ -25,12 +24,12 @@ flex-grow: 1;
   margin: 0;
 }
 
-.navbar ul li{
+.navbar ul li {
   position: relative;
   position: sticky;
 }
 
-.navbar ul li a{
+.navbar ul li a {
   text-decoration: none;
   font-size: 18px;
   color: #2d2d2d;
@@ -38,7 +37,7 @@ flex-grow: 1;
   position: sticky;
 }
 
-.navbar ul li a::before{
+.navbar ul li a::before {
   content: '';
   position: absolute;
   width: 0;
@@ -49,54 +48,65 @@ flex-grow: 1;
   transition: 0.3s ease;
 }
 
-.navbar ul li a:hover::before{
+.navbar ul li a:hover::before {
   color: #10a37f;
 }
 
-.navbar ul li a:hover::before{
+.navbar ul li a:hover::before {
   width: 100%;
 }
 
-.navbar-search{
+.navbar-search {
   display: flex;
   align-items: center;
   transition: 0.3s ease;
   gap: 10px;
 }
 
-.navbar-search input{
+.navbar-search input {
   padding: 7px 15px;
   border-radius: 25px;
   border: none;
   outline: none;
   font-size: 17px;
-  margin-right: 10px;
   width: 250px;
   background-color: #e8e7e7;
   color: #333;
   transition: 0.3s ease;
 }
 
-.navbar-search button{
+.navbar-search button {
   padding: 7px 10px;
   border-radius: 25px;
   border: none;
   outline: none;
-  margin-right: 10px;
   background-color: #e1dfdf;
 }
 
-.header h1{
+.navbar-search .fas {
+  font-size: 20px;
+  color: #333;
+  cursor: pointer;
+}
+
+.header h1 {
   margin-bottom: 15px;
 }
 
-.navbar-container{
+.navbar-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 85px;
 }
 
-.promo{
+.promo {
   align-items: center;
+}
+
+.navbar-search .mirrored-icon {
+  font-size: 20px;
+  color: #333;
+  cursor: pointer;
+  transform: scaleX(-1);
 }
