--- a/Homepage.Css
+++ b/Homepage.Css
@@ -83,3 +83,32 @@ top: 0;
     margin-right: 10px;
     background-color: #e1dfdf;
 }
+
+.navbar-search .icon {
+    font-size: 20px;
+    color: #333;
+    cursor: pointer;
+  }
+  
+  .header h1 {
+    margin-bottom: 15px;
+  }
+  
+  .navbar-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 85px;
+  }
+  
+  .promo {
+    align-items: center;
+  }
+  
+  .mirrored-icon {
+    font-size: 20px;
+    color: #333;
+    cursor: pointer;
+    transform: scaleX(-1);
+  }
+  
