--- a/Homepage.Css
+++ b/Homepage.Css
@@ -32,7 +32,7 @@ top: 0;
 .navbar ul li a{
     text-decoration: none;
     font-size: 18px;
-    color: #2d2d2d;
+    color: #ffffff;
     transition: 0.3s ease;
     position: sticky;
 }
@@ -44,7 +44,7 @@ top: 0;
     height: 2px;
     left: 5px;
     bottom: -5px;
-    background-color: #000000;
+    background-color: #ffffff;
     transition: 0.3s ease;
 }
 
@@ -71,7 +71,7 @@ top: 0;
     margin-right: 10px;
     width: 250px;
     background-color: #e8e7e7;
-    color: #333;
+    color: #ffffff;
     transition: 0.3s ease;
 }
 
@@ -86,29 +86,79 @@ top: 0;
 
 .navbar-search .icon {
     font-size: 20px;
-    color: #333;
+    color: #ffffff;
     cursor: pointer;
   }
   
-  .header h1 {
-    margin-bottom: 15px;
+  .navbar-search button {
+    padding: 7px 10px;
+    border-radius: 25px;
+    border: none;
+    outline: none;
+    background-color: #e1dfdf;
   }
   
-  .navbar-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 85px;
-  }
-  
-  .promo {
-    align-items: center;
-  }
-  
-  .mirrored-icon {
+  .navbar-search .fas {
     font-size: 20px;
-    color: #333;
+    color: #ffffff;
     cursor: pointer;
-    transform: scaleX(-1);
   }
+
   
+  .background{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+  }
+
+  .Video{
+    text-align: center;
+  }
+
+  .Video h1{
+    font-size: 65px;
+    color:#ffffff;
+    margin-bottom: 50px;
+  }
+
+  .Video a{
+    font-size: 23px;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    border: 2px solid #ffffff;
+    padding: 15px 25px;
+    border-radius: 50px;
+    transition: 0.3s;
+  }
+
+  .Video a:hover{
+    background-color: #918f8f;
+    color: #000000;
+  }
+
+
+  .background-clip{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -2;
+
+  }
+
+  @media (min-aspect-radio: 16/9) {
+    .background-clip{
+      width:100%;
+      height: auto;
+
+    }
+  }
+
+  @media(max-aspect-radio: 16/9){
+    .background-clip{
+      width: auto;
+      height: 100%;
+    }
+  }
