--- a/Product.css
+++ b/Product.css
@@ -20,16 +20,18 @@ body {
 }
 
 .navbar {
-  background-color: rgba(255, 255, 255, 0.9);
-  padding: 20px 50px;
+  background-color: transparent;
+  padding: 35px 85px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: sticky;
   top: 0;
-  z-index: 1000;
-  backdrop-filter: blur(15px);
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.navbar:hover {
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .navbar h1 {
@@ -41,6 +43,10 @@ body {
   list-style: none;
   display: flex;
   gap: 25px;
+}
+
+.navbar ul li {
+  position: relative;
 }
 
 .navbar ul li a {
@@ -97,6 +103,7 @@ body {
   padding: 7px 15px;
   border-radius: 25px;
   border: none;
+  outline: none;
   background-color: var(--primary-color);
   color: #fff;
   cursor: pointer;
@@ -188,4 +195,62 @@ body {
   background-color: #28a745;
   color: #fff;
   transform: scale(1.05);
+}
+
+.background {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Video {
+  text-align: center;
+}
+
+.Video h1 {
+  font-size: 65px;
+  color: #ffffff;
+  margin-bottom: 50px;
+}
+
+.Video a {
+  font-size: 23px;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  border: 2px solid #ffffff;
+  padding: 15px 25px;
+  border-radius: 50px;
+  transition: 0.3s;
+}
+
+.Video a:hover {
+  background-color: #918f8f;
+  color: #000000;
+}
+
+.background-clip {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: -2;
+}
+
+@media (min-aspect-radio: 16/9) {
+  .background-clip {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media (max-aspect-radio: 16/9) {
+  .background-clip {
+    width: auto;
+    height: 100%;
+  }
+}
+
+.title {
+  color: white;
 }
