--- a/Homepage.Css
+++ b/Homepage.Css
@@ -86,7 +86,7 @@ top: 0;
 
 .navbar-search .icon {
     font-size: 20px;
-    color: #ffffff;
+    color: #000000;
     cursor: pointer;
   }
   
@@ -100,7 +100,7 @@ top: 0;
   
   .navbar-search .fas {
     font-size: 20px;
-    color: #ffffff;
+    color: #292727;
     cursor: pointer;
   }
 
@@ -165,4 +165,131 @@ top: 0;
 
 .title{
   color: white;
+}
+
+.wrapper{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+.Image{
+  width: 500px;
+  position: relative;
+
+}
+
+img{
+  width: 100%;
+  display: block;
+  margin: auto;
+}
+
+.text{
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  background: rgba(0,0,0,0.6);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  opacity: 0;
+  transition: 0.6s;
+
+}
+
+.text:hover{
+  opacity: 1;
+}
+
+.text h1{
+  font-size: 45px;
+  color: #8db3cb;
+  margin-bottom: 15px;
+}
+
+.text > *{
+  transform: translateY(25px);
+  transition: transform 0.6s;
+}
+.text:hover > * {
+  transform: translateY(25px);
+  transition: transform 0.6s;
+
+}
+
+
+.wrapper2{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+.Image2{
+  width: 500px;
+  position: relative;
+
+}
+
+img {
+  width: 100%;
+  display: block;
+  margin: auto;
+}
+
+.text2{
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  background: rgba(0,0,0,0.6);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  opacity: 0;
+  transition: 0.6s;
+
+}
+
+.text2:hover{
+  opacity: 1;
+}
+
+.text2 h1{
+  font-size: 45px;
+  color: #d6bb96;
+  margin-bottom: 15px;
+}
+
+.text2 > *{
+  transform: translateY(25px);
+  transition: transform 0.6s;
+}
+.text2:hover > * {
+  transform: translateY(25px);
+  transition: transform 0.6s;
+
+}
+
+.categorie{
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  margin: auto;
+
+
+}
+
+.Title-Cat{
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  
 }
