--- a/Aboutus.css
+++ b/Aboutus.css
@@ -147,7 +147,7 @@ top: 0;
   footer ul li a {
     text-decoration: none;
     font-size: 16px;
-    color: var(--primary-color);
+    color:#000000;
     transition: color 0.3s ease, transform 0.3s ease;
   }
   
