--- a/Homepage.Css
+++ b/Homepage.Css
@@ -348,16 +348,16 @@ flex-wrap: wrap;
 
 .producten {
   display: flex;
-  justify-content: left;
+  justify-content: center;
   align-items: center;
   gap: 20px;
   flex-wrap: wrap;
 }
+
 .product-item {
   width: 220px;
   height: 300px;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: var(--secondary-color);
@@ -388,6 +388,7 @@ flex-wrap: wrap;
   color: var(--primary-color);
   margin-bottom: 5px;
 }
+
 
 
 /* FOOTER */
